--- a/code/analysis_Redo.Rmd
+++ b/code/analysis_Redo.Rmd
@@ -32,11 +32,18 @@ library(tigris)
 ```
 
 
+```{r}
+mean.nas<- function(x){ mean(x, na.rm = TRUE)}
+
+options(scipen=999)
+```
+
+
 
 ```{r}
 dfc <- read_csv("/Users/jhm65/Dropbox/Git/Competition/data_processed/analyticalfile.csv")
 uds.sites.full <- read_csv("/Users/jhm65/Dropbox/Git/Competition/data_processed/sites_geocoded.csv") %>%
-  mutate(Access = ifelse(`BHCMIS ID` == "080170" & as.numeric(`Total Weekly Hours Of Operation`) > 40000, 40, Access))
+  mutate(Access = ifelse(`BHCMIS ID` == "080170" & as.numeric(`Total Weekly Hours Of Operation`) > 40000, 4, Access))
 clinics.in.zips <- uds.sites.full[!is.na(uds.sites.full$Zip),] %>%
   #filter(Year >= included.years[1]) %>%
   group_by(Zip, Year) %>%
@@ -45,6 +52,8 @@ clinics.in.zips <- uds.sites.full[!is.na(uds.sites.full$Zip),] %>%
 
 uds.sites.full %>%
   filter(is.na(Zip))
+
+
 ```
 
 ## Balance between treated and controls
@@ -223,93 +232,97 @@ event_study(data = df.core,
   geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5)  + ggtitle("Financial Resilience"), common.legend = TRUE, nrow = 1 ) 
 p0
 
+
+summary(lm(data = df.core %>% filter(!is.na(Tx) & year.rel < 0) %>% mutate(Treated = ifelse(Att > 0, 1, 0)), Total ~ Treated*year.rel))$coeff[4,]
+summary(lm(data = df.core %>% filter(!is.na(Tx) & year.rel < 0) %>% mutate(Treated = ifelse(Att > 0, 1, 0)), Qcomp ~ Treated*year.rel))$coeff[4,]
+summary(lm(data = df.core %>% filter(!is.na(Tx) & year.rel < 0) %>% mutate(Treated = ifelse(Att > 0, 1, 0)), Altman ~ Treated*year.rel))$coeff[4,]
 ```
 
 
 ## Broken down by components
 ```{r}
+# 
+# df.core <- dfc %>% 
+#   mutate( MCD = Total * Pct.MCD / 100,
+#          None = Total * Pct.None / 100,
+#          MCR = Total * Pct.MCR / 100,
+#          COM = Total * Pct.COM / 100,
+#          
+#          crc.rate = crc.rate * 100, 
+#          pap.rate = pap.rate * 100, 
+#          childbmi.rate = childbmi.rate * 100, 
+#          adultbmi.rate = adultbmi.rate * 100, 
+#          htn.rate = htn.rate * 100, 
+#          dm.rate = dm.rate * 100) %>% 
+#   select(`BHCMIS ID`, value, Tx, Year, Att, Att.random, year.rel, ID, STATE, 
+#          MCD:COM, 
+#          crc.rate, pap.rate, childbmi.rate, adultbmi.rate, htn.rate, dm.rate, 
+#          Liquidity:NetWorth, 
+#          Pct.NHA:Pct.COM) #%>%  mutate(Altman = ifelse(is.infinite(Altman), NA, Altman))#, #pap.rate:dm.total, Liquidity:Altman) 
+#   
+# 
+# 
+# 
+# did.core <- c(0, 0, 0, 0)
+# 
+# for (j in 10:23){
+#   
+#   df.temp <- df.core[,c(1:9, j, 24:ncol(df.core))]
+#   colnames(df.temp)[10] <- "Outcome"
+#   outcomes <- did2s(
+#       data = df.temp, 
+#       yname = "Outcome", 
+#       treatment = "Tx",
+#         first_stage = ~ Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless | ID + Year , 
+#         second_stage = ~ i(Tx, ref = FALSE),
+#         cluster_var = "STATE",
+#       verbose = FALSE
+#     )
+#   
+#   did.core <- rbind(did.core, outcomes$coeftable)
+#   
+#   
+# }
+# 
+# 
+# did.core <- did.core[-1,]
+# rownames(did.core) <- NULL
+# 
 
-df.core <- dfc %>% 
-  mutate( MCD = Total * Pct.MCD / 100,
-         None = Total * Pct.None / 100,
-         MCR = Total * Pct.MCR / 100,
-         COM = Total * Pct.COM / 100,
-         
-         crc.rate = crc.rate * 100, 
-         pap.rate = pap.rate * 100, 
-         childbmi.rate = childbmi.rate * 100, 
-         adultbmi.rate = adultbmi.rate * 100, 
-         htn.rate = htn.rate * 100, 
-         dm.rate = dm.rate * 100) %>% 
-  select(`BHCMIS ID`, value, Tx, Year, Att, Att.random, year.rel, ID, STATE, 
-         MCD:COM, 
-         crc.rate, pap.rate, childbmi.rate, adultbmi.rate, htn.rate, dm.rate, 
-         Liquidity:NetWorth, 
-         Pct.NHA:Pct.COM) #%>%  mutate(Altman = ifelse(is.infinite(Altman), NA, Altman))#, #pap.rate:dm.total, Liquidity:Altman) 
-  
-
-
-
-did.core <- c(0, 0, 0, 0)
-
-for (j in 10:23){
-  
-  df.temp <- df.core[,c(1:9, j, 24:ncol(df.core))]
-  colnames(df.temp)[10] <- "Outcome"
-  outcomes <- did2s(
-      data = df.temp, 
-      yname = "Outcome", 
-      treatment = "Tx",
-        first_stage = ~ Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless | ID + Year , 
-        second_stage = ~ i(Tx, ref = FALSE),
-        cluster_var = "STATE",
-      verbose = FALSE
-    )
-  
-  did.core <- rbind(did.core, outcomes$coeftable)
-  
-  
-}
-
-
-did.core <- did.core[-1,]
-rownames(did.core) <- NULL
-
-mean.nas<- function(x){ mean(x, na.rm = TRUE)}
-
-options(scipen=999)
-
-df.core %>% 
-  mutate(Post = ifelse(year.rel >= 0, 1, 0), 
-         Treated = ifelse(Att > 0, 1, 0)) %>% 
-  group_by(Post, Treated) %>% 
-  select(MCD:NetWorth) %>% 
-  summarise_all(mean.nas) %>% 
-  # summarise(Total = mean(Total, na.rm = TRUE), 
-  #           Quality = mean(Qcomp, na.rm = TRUE), 
-  #           Finances = mean(Altman, na.rm = TRUE)) %>% 
-  pivot_longer(cols = MCD:NetWorth) %>% 
-  mutate(value = round(value, 2)) %>% 
-  #filter(name %in% c("Total", "Qcomp", "Altman")) %>% 
-  pivot_wider(id_cols = name, names_from = c(Treated, Post), values_from = value) %>% 
-  mutate(Unadjusted = (`1_1` - `1_0`) - (`0_1` - `0_0`)) %>% 
-  cbind(did.core) %>% 
-   select(name, `0_0`, `0_1`, `1_0`, `1_1`, Unadjusted, Estimate, `Std. Error`) %>% 
-  mutate(Estimate = round(Estimate, 2), 
-         `95% CI` = paste(round(Estimate - 1.96 * `Std. Error`, 2), ", ", round(Estimate + 1.96 * `Std. Error`, 2), sep = ""), 
-         `% Change` = round(Estimate / `1_0` * 100, 1)) %>% 
-  rename(Outcome = name) %>% 
-  select(Outcome:Estimate, `95% CI`, `% Change`) %>% 
-  kable("html", booktabs = T, col.names = c("Outcome","Pre","Post","Pre","Post","Unadjusted DID","Estimate","95% CI","% Change")) %>% 
-  kable_styling(latex_options = c("striped")) %>%
-  pack_rows(index = c("Total Patients by Insurnace" = 4, "Quality Measure Components" = 6, "Financial Components" = 4)) %>% 
-  add_header_above(c(" " = 1, "Control" = 2, "Treated" = 2, " " = 1, "Staggered DID" = 3))
+# 
+# df.core %>% 
+#   mutate(Post = ifelse(year.rel >= 0, 1, 0), 
+#          Treated = ifelse(Att > 0, 1, 0)) %>% 
+#   group_by(Post, Treated) %>% 
+#   select(MCD:NetWorth) %>% 
+#   summarise_all(mean.nas) %>% 
+#   # summarise(Total = mean(Total, na.rm = TRUE), 
+#   #           Quality = mean(Qcomp, na.rm = TRUE), 
+#   #           Finances = mean(Altman, na.rm = TRUE)) %>% 
+#   pivot_longer(cols = MCD:NetWorth) %>% 
+#   mutate(value = round(value, 2)) %>% 
+#   #filter(name %in% c("Total", "Qcomp", "Altman")) %>% 
+#   pivot_wider(id_cols = name, names_from = c(Treated, Post), values_from = value) %>% 
+#   mutate(Unadjusted = (`1_1` - `1_0`) - (`0_1` - `0_0`)) %>% 
+#   cbind(did.core) %>% 
+#    select(name, `0_0`, `0_1`, `1_0`, `1_1`, Unadjusted, Estimate, `Std. Error`) %>% 
+#   mutate(Estimate = round(Estimate, 2), 
+#          `95% CI` = paste(round(Estimate - 1.96 * `Std. Error`, 2), ", ", round(Estimate + 1.96 * `Std. Error`, 2), sep = ""), 
+#          `% Change` = round(Estimate / `1_0` * 100, 1)) %>% 
+#   rename(Outcome = name) %>% 
+#   select(Outcome:Estimate, `95% CI`, `% Change`) %>% 
+#   kable("html", booktabs = T, col.names = c("Outcome","Pre","Post","Pre","Post","Unadjusted DID","Estimate","95% CI","% Change")) %>% 
+#   kable_styling(latex_options = c("striped")) %>%
+#   pack_rows(index = c("Total Patients by Insurnace" = 4, "Quality Measure Components" = 6, "Financial Components" = 4)) %>% 
+#   add_header_above(c(" " = 1, "Control" = 2, "Treated" = 2, " " = 1, "Staggered DID" = 3))
+# 
+# 
 
 ```
 
 
 
-## Panel Complexity and Intensity of Care
+## Patient Selection on Panel Complexity and Intensity of Care
 ```{r}
 
 df.select.stint <- dfc %>% 
@@ -419,8 +432,147 @@ p2
 
 
 
+summary(lm(data = df.select.stint %>% filter(!is.na(Tx) & year.rel < 0) %>% mutate(Treated = ifelse(Att > 0, 1, 0)), Complexity ~ Treated*year.rel))$coeff[4,]
+summary(lm(data = df.select.stint %>% filter(!is.na(Tx) & year.rel < 0) %>% mutate(Treated = ifelse(Att > 0, 1, 0)), Intensity ~ Treated*year.rel))$coeff[4,]
 
 ```
+
+
+
+
+## Patient Selection on Payer Mix
+```{r}
+
+df.select.payer <- dfc %>% 
+  mutate( MCD = Total * Pct.MCD / 100,
+         None = Total * Pct.None / 100,
+         MCR = Total * Pct.MCR / 100,
+         COM = Total * Pct.COM / 100,
+         
+         crc.rate = crc.rate * 100, 
+         pap.rate = pap.rate * 100, 
+         childbmi.rate = childbmi.rate * 100, 
+         adultbmi.rate = adultbmi.rate * 100, 
+         htn.rate = htn.rate * 100, 
+         dm.rate = dm.rate * 100) %>% 
+  select(`BHCMIS ID`, value, Tx, Year, Att, Att.random, year.rel, ID, STATE, 
+         MCD:COM, Pct.MCD, Pct.None, Pct.MCR, Pct.COM, 
+         Pct.NHA:Pct.COM) #%>%  mutate(Altman = ifelse(is.infinite(Altman), NA, Altman))#, #pap.rate:dm.total, Liquidity:Altman) 
+  
+
+
+
+did.select.payer <- c(0, 0, 0, 0)
+
+for (j in 10:17){
+  
+  df.temp <- df.select.payer[,c(1:9, j, 18:ncol(df.select.payer))]
+  colnames(df.temp)[10] <- "Outcome"
+  outcomes <- did2s(
+      data = df.temp, 
+      yname = "Outcome", 
+      treatment = "Tx",
+        first_stage = ~ Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless | ID + Year , 
+        second_stage = ~ i(Tx, ref = FALSE),
+        cluster_var = "STATE",
+      verbose = FALSE
+    )
+  
+  did.select.payer <- rbind(did.select.payer, outcomes$coeftable)
+  
+  
+}
+
+
+did.select.payer <- did.select.payer[-1,]
+rownames(did.select.payer) <- NULL
+
+mean.nas<- function(x){ mean(x, na.rm = TRUE)}
+
+options(scipen=999)
+
+df.select.payer %>% 
+  mutate(Post = ifelse(year.rel >= 0, 1, 0), 
+         Treated = ifelse(Att > 0, 1, 0)) %>% 
+  group_by(Post, Treated) %>% 
+  select(MCD:Pct.COM) %>% 
+  summarise_all(mean.nas) %>% 
+  # summarise(Total = mean(Total, na.rm = TRUE), 
+  #           Quality = mean(Qcomp, na.rm = TRUE), 
+  #           Finances = mean(Altman, na.rm = TRUE)) %>% 
+  pivot_longer(cols = MCD:Pct.COM) %>% 
+  mutate(value = round(value, 2)) %>% 
+  #filter(name %in% c("Total", "Qcomp", "Altman")) %>% 
+  pivot_wider(id_cols = name, names_from = c(Treated, Post), values_from = value) %>% 
+  mutate(Unadjusted = (`1_1` - `1_0`) - (`0_1` - `0_0`)) %>% 
+  cbind(did.select.payer) %>% 
+   select(name, `0_0`, `0_1`, `1_0`, `1_1`, Unadjusted, Estimate, `Std. Error`) %>% 
+  mutate(Estimate = round(Estimate, 2), 
+         `95% CI` = paste(round(Estimate - 1.96 * `Std. Error`, 2), ", ", round(Estimate + 1.96 * `Std. Error`, 2), sep = ""), 
+         `% Change` = round(Estimate / `1_0` * 100, 1)) %>% 
+  rename(Outcome = name) %>% 
+  select(Outcome:Estimate, `95% CI`, `% Change`) %>% 
+  kable("html", booktabs = T, col.names = c("Outcome","Pre","Post","Pre","Post","Unadjusted DID","Estimate","95% CI","% Change")) %>% 
+  kable_styling(latex_options = c("striped")) %>%
+  pack_rows(index = c("Total Patients by Payer" = 4, "Payer Mix, %" = 4)) %>% 
+  add_header_above(c(" " = 1, "Control" = 2, "Treated" = 2, " " = 1, "Staggered DID" = 3))
+
+
+
+pm1 <- event_study(data = df.select.payer, 
+  yname = "MCD", idname = "ID", tname = "Year", gname = "Att", estimator = "did2s", xformla = ~Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless) %>% 
+  filter(abs(term) < 7) %>% 
+  filter(estimator %in% c("Gardner (2021)")) %>% 
+  ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9)) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.2, position = position_dodge(0.9))  + 
+  #facet_wrap(~V1, scales = "free_y", ncol = 3) + 
+  theme_tufte_revised() + geom_vline(xintercept=-0.5, color="red", linetype="dashed", alpha=.5) + 
+  geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Medicaid") + xlab("Year Relative to Competitive Shock") + ylab("Number of Patients")
+
+
+
+pm2 <- event_study(data = df.select.payer, 
+  yname = "COM", idname = "ID", tname = "Year", gname = "Att", estimator = "did2s", xformla = ~Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless) %>% 
+  filter(abs(term) < 7) %>% 
+  filter(estimator %in% c("Gardner (2021)")) %>% 
+  ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9)) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.2, position = position_dodge(0.9))  + 
+  #facet_wrap(~V1, scales = "free_y", ncol = 3) + 
+  theme_tufte_revised() + geom_vline(xintercept=-0.5, color="red", linetype="dashed", alpha=.5) + 
+  geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Private") + xlab("Year Relative to Competitive Shock") + ylab("Number of Patients")
+
+
+pm3 <- event_study(data = df.select.payer, 
+  yname = "MCR", idname = "ID", tname = "Year", gname = "Att", estimator = "did2s", xformla = ~Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless) %>% 
+  filter(abs(term) < 7) %>% 
+  filter(estimator %in% c("Gardner (2021)")) %>% 
+  ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9)) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.2, position = position_dodge(0.9))  + 
+  #facet_wrap(~V1, scales = "free_y", ncol = 3) + 
+  theme_tufte_revised() + geom_vline(xintercept=-0.5, color="red", linetype="dashed", alpha=.5) + 
+  geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Medicare") + xlab("Year Relative to Competitive Shock") + ylab("Number of Patients")
+
+
+
+pm4 <- event_study(data = df.select.payer, 
+  yname = "None", idname = "ID", tname = "Year", gname = "Att", estimator = "did2s", xformla = ~Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless) %>% 
+  filter(abs(term) < 7) %>% 
+  filter(estimator %in% c("Gardner (2021)")) %>% 
+  ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9)) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.2, position = position_dodge(0.9))  + 
+  #facet_wrap(~V1, scales = "free_y", ncol = 3) + 
+  theme_tufte_revised() + geom_vline(xintercept=-0.5, color="red", linetype="dashed", alpha=.5) + 
+  geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Uninsured") + xlab("Year Relative to Competitive Shock") + ylab("Number of Patients")
+
+
+
+pm <- ggarrange(pm1, pm2, pm3, pm4, common.legend = TRUE)
+pm
+
+
+summary(lm(data = df.select.payer %>% filter(!is.na(Tx) & year.rel < 0) %>% mutate(Treated = ifelse(Att > 0, 1, 0)), MCD ~ Treated*year.rel))$coeff[4,]
+summary(lm(data = df.select.payer %>% filter(!is.na(Tx) & year.rel < 0) %>% mutate(Treated = ifelse(Att > 0, 1, 0)), None ~ Treated*year.rel))$coeff[4,]
+summary(lm(data = df.select.payer %>% filter(!is.na(Tx) & year.rel < 0) %>% mutate(Treated = ifelse(Att > 0, 1, 0)), MCR ~ Treated*year.rel))$coeff[4,]
+summary(lm(data = df.select.payer %>% filter(!is.na(Tx) & year.rel < 0) %>% mutate(Treated = ifelse(Att > 0, 1, 0)), COM ~ Treated*year.rel))$coeff[4,]
+
+```
+
 
 
 
@@ -1334,7 +1486,8 @@ suppressWarnings(print(p.spill))
 zipsize2 <- zctas(starts_with = unique(c(df.spill2$Zip)), year = 2010)
 
 
-df.spill3 <- df.spill2 %>% filter(NumberofPatients > 50) %>% 
+df.spill3 <- df.spill2 %>% filter(NumberofPatients > 50 ) %>% 
+  #group_by(Zip) %>% mutate(MaxNum = max(NumberofPatients)) %>% filter(MaxNum > 50) %>% 
   
   left_join(census %>% 
               mutate(Unins.rate = Uninsured / Unins.denom) %>% 
@@ -1343,7 +1496,9 @@ df.spill3 <- df.spill2 %>% filter(NumberofPatients > 50) %>%
   mutate(Area.SQmiles = ALAND10 / 2.59e6, 
          l.popdensity = log(TotalPop / Area.SQmiles)) %>% 
   #mutate(Sites = log(Sites + 1)) %>% 
-  mutate(Poverty = IncomeBelowPoverty / PovertyStatusDet) #%>% filter(Zip != '04401')
+  mutate(Poverty = IncomeBelowPoverty / PovertyStatusDet) #%>% filter(NumberofPatients > 100 | NumberofPatients / TotalPop > 0.01)
+
+#%>% filter(Zip != '04401')
 # ,
 #          Unemployed = Unemployed / Unemp_denom,
 #          Elderly = Age65andOver / TotalPop,
@@ -1493,23 +1648,23 @@ qnats2 <- seq(0.25, 1, by = 0.25)
         cluster_var = "Zip",
       verbose = FALSE
     )
-    TEs <- data.frame(model.dist.quants$coeftable)[1,]
+    tes <- data.frame(model.dist.quants$coeftable)[1,]
     
     
   for (i in 1:4){
       model.dist.quants <-  did2s(
       data = df.spill3  %>% filter(Dist > quantile(Dist, qnats1[i]) & Dist <= quantile(Dist, qnats2[i]))%>% mutate(Hours = ifelse(Sites == 0, 0, Total.Hours / Sites), SL = log(Sites + 1))  , 
-      yname = "SL", 
+      yname = "Sites", 
       treatment = "Tx",
         first_stage = ~ 1 | Zip + Year , 
         second_stage = ~ i(Tx, ref = FALSE)  ,
         cluster_var = "Zip",
       verbose = FALSE
     ) 
-      TEs <- rbind(TEs, data.frame(model.dist.quants$coeftable)[1,])
+      tes <- rbind(tes, data.frame(model.dist.quants$coeftable)[1,])
   }
     
-    TEs
+    tes
     
     
 zp1 <- event_study(data = df.spill3 %>% filter(Dist > quantile(Dist, 0.8)), 
@@ -1519,7 +1674,7 @@ zp1 <- event_study(data = df.spill3 %>% filter(Dist > quantile(Dist, 0.8)),
   ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9)) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.2, position = position_dodge(0.9))  + 
   #facet_wrap(~V1, scales = "free_y", ncol = 3) + 
   theme_tufte_revised() + geom_vline(xintercept=-0.5, color="red", linetype="dashed", alpha=.5) + 
-  geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Sites in Farthest 20% of Zips")
+  geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Locations in Farthest 20% of Zips")+ xlab("Year Relative to Competitive Shock") + ylab("Number of Locations")
 
 
 
@@ -1530,28 +1685,28 @@ zp2 <- event_study(data = df.spill3 %>% filter(Dist == 0),
   ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9)) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.2, position = position_dodge(0.9))  + 
   #facet_wrap(~V1, scales = "free_y", ncol = 3) + 
   theme_tufte_revised() + geom_vline(xintercept=-0.5, color="red", linetype="dashed", alpha=.5) + 
-  geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Sites in Competitive Zip")
+  geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Locations in Competitive Zip")+ xlab("Year Relative to Competitive Shock") + ylab("Number of Locations")
 
 
 zp3 <- event_study(data = df.spill3 %>% filter(Dist > quantile(Dist, 0.8)) %>% mutate(Hours = ifelse(Sites == 0, 0, Total.Hours / Sites)), 
-  yname = "Hours", idname = "Zip", tname = "Year", gname = "Att", estimator = "all") %>% 
+  yname = "Total.Hours", idname = "Zip", tname = "Year", gname = "Att", estimator = "all") %>% 
   filter(abs(term) < 7) %>% 
   filter(estimator %in% c("Gardner (2021)")) %>% 
   ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9)) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.2, position = position_dodge(0.9))  + 
   #facet_wrap(~V1, scales = "free_y", ncol = 3) + 
   theme_tufte_revised() + geom_vline(xintercept=-0.5, color="red", linetype="dashed", alpha=.5) + 
-  geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Total Hours in Farthest 20% of Zips")
+  geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Hours per Week in Farthest 20% of Zips")+ xlab("Year Relative to Competitive Shock") + ylab("Hours per Week")
 
 
 
 zp4 <- event_study(data = df.spill3 %>% filter(Dist == 0) %>% mutate(Hours = ifelse(Sites == 0, 0, Total.Hours / Sites)), 
-  yname = "Hours", idname = "Zip", tname = "Year", gname = "Att", estimator = "all") %>% 
+  yname = "Total.Hours", idname = "Zip", tname = "Year", gname = "Att", estimator = "all") %>% 
   filter(abs(term) < 7) %>% 
   filter(estimator %in% c("Gardner (2021)")) %>% 
   ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9)) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.2, position = position_dodge(0.9))  + 
   #facet_wrap(~V1, scales = "free_y", ncol = 3) + 
   theme_tufte_revised() + geom_vline(xintercept=-0.5, color="red", linetype="dashed", alpha=.5) + 
-  geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Total Hours in Competitive Zip")
+  geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Hours per Week in Competitive Zip")+ xlab("Year Relative to Competitive Shock") + ylab("Hours per Week")
 
 
 
@@ -1571,6 +1726,7 @@ did2s(
 df.spill3  %>% filter(Dist > quantile(Dist, qnats1[i]) & Dist <= quantile(Dist, qnats2[i])) %>% 
   group_by(Tx) %>% 
   summarise(mean(Sites))
+
 
 
 
@@ -1679,18 +1835,56 @@ df.rival %>%
   pack_rows(index = c("Total Patients by Insurnace" = 5, "Payor Mix, Proportion" = 4)) %>% 
   add_header_above(c(" " = 1, "Control" = 2, "Treated" = 2, " " = 1, "Staggered DID" = 3))
 
-event_study(data = df.rival, 
-  yname = "Total", idname = "ID", tname = "Year", gname = "Att", estimator = "all", xformla = ~Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless) %>% 
-  filter(abs(term) <= 7) %>% 
+
+rpm1 <- event_study(data = df.rival, 
+  yname = "MCD", idname = "ID", tname = "Year", gname = "Att", estimator = "did2s", xformla = ~Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless) %>% 
+  filter(abs(term) < 7) %>% 
   filter(estimator %in% c("Gardner (2021)")) %>% 
   ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9)) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.2, position = position_dodge(0.9))  + 
   #facet_wrap(~V1, scales = "free_y", ncol = 3) + 
   theme_tufte_revised() + geom_vline(xintercept=-0.5, color="red", linetype="dashed", alpha=.5) + 
-  geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Total Patients")
+  geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Medicaid") + xlab("Year Relative to Competitive Shock") + ylab("Number of Patients")
+
+
+
+rpm2 <- event_study(data = df.rival, 
+  yname = "COM", idname = "ID", tname = "Year", gname = "Att", estimator = "did2s", xformla = ~Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless) %>% 
+  filter(abs(term) < 7) %>% 
+  filter(estimator %in% c("Gardner (2021)")) %>% 
+  ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9)) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.2, position = position_dodge(0.9))  + 
+  #facet_wrap(~V1, scales = "free_y", ncol = 3) + 
+  theme_tufte_revised() + geom_vline(xintercept=-0.5, color="red", linetype="dashed", alpha=.5) + 
+  geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Private") + xlab("Year Relative to Competitive Shock") + ylab("Number of Patients")
+
+
+rpm3 <- event_study(data = df.rival, 
+  yname = "MCR", idname = "ID", tname = "Year", gname = "Att", estimator = "did2s", xformla = ~Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless) %>% 
+  filter(abs(term) < 7) %>% 
+  filter(estimator %in% c("Gardner (2021)")) %>% 
+  ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9)) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.2, position = position_dodge(0.9))  + 
+  #facet_wrap(~V1, scales = "free_y", ncol = 3) + 
+  theme_tufte_revised() + geom_vline(xintercept=-0.5, color="red", linetype="dashed", alpha=.5) + 
+  geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Medicare") + xlab("Year Relative to Competitive Shock") + ylab("Number of Patients")
+
+
+
+rpm4 <- event_study(data = df.rival, 
+  yname = "None", idname = "ID", tname = "Year", gname = "Att", estimator = "did2s", xformla = ~Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless) %>% 
+  filter(abs(term) < 7) %>% 
+  filter(estimator %in% c("Gardner (2021)")) %>% 
+  ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9)) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.2, position = position_dodge(0.9))  + 
+  #facet_wrap(~V1, scales = "free_y", ncol = 3) + 
+  theme_tufte_revised() + geom_vline(xintercept=-0.5, color="red", linetype="dashed", alpha=.5) + 
+  geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Uninsured") + xlab("Year Relative to Competitive Shock") + ylab("Number of Patients")
+
+
+
+rpm <- ggarrange(rpm1, rpm2, rpm3, rpm4, common.legend = TRUE)
+rpm
   
 
 
-summary(lm(data = df.temp %>% filter(!is.na(Tx) & year.rel < 0) %>% mutate(Treated = ifelse(Att > 0, 1, 0)), Outcome ~ Treated*year.rel))
+summary(lm(data = df.rival %>% filter(!is.na(Tx) & year.rel < 0) %>% mutate(Treated = ifelse(Att > 0, 1, 0)), COM ~ Treated*year.rel))
   
 ```
 
@@ -1870,6 +2064,24 @@ df.p %>%
 
 
 
+## Benjamini-Hochberg Correction - BEWARE did.core and TEs/TEs_DIST
+```{r}
+
+## All Hypotheses tested
+data.frame(rbind(did.core, did.select.stint, did.select.payer, did.rival)) %>% 
+  rbind(TEs) %>% rbind(TEs_Dist) %>% 
+  arrange(`Pr...t..`) %>% 
+  cbind(c(1:43) / 43 * 0.1) %>% 
+  mutate(Row = row_number()) %>% 
+  ggplot(aes(x = Row, y = `Pr...t..`)) + geom_point() + 
+  ylab("p-values") + xlab("Significance Rank") + geom_abline(slope = 1/43 * 0.1, intercept = 0, color="red", linetype="dashed", alpha=.5) + theme_minimal()
+
+
+
+
+
+
+```
 
 
 
